--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,9 @@ version: 0.0.1
 author: John Anderson <john@iminate.com>
 homepage: https://github.com/platinumjam/flutter_mdns
 
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
